GNOME Bugzilla – Bug 727974
Fix up failure-to-see-expected-message logging
Last modified: 2014-07-09 15:06:25 UTC
When GLib had been told to expect message X, but then actually saw message Y, it would log the "did not see expected message" error with message Y's log level and domain, which makes no sense. Change it to log with domain "GLib" and G_LOG_LEVEL_CRITICAL instead. Also, include the expected domain in the error message, so that if that's the reason why the expectation didn't match, you can tell that from the error message. Update glib/tests/testing.c for these changes; for all other test programs in GLib and elsewhere, this change should not break any existing tests, it should only improve the output on failure.
Created attachment 274005 [details] [review] Fix up failure-to-see-expected-message logging
This one was annoying me again, so I pushed it. Attachment 274005 [details] pushed as be0b921 - Fix up failure-to-see-expected-message logging
Makes sense to me FWIW.